--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -5,10 +5,31 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>fr.mbo.workshops</groupId>
-        <artifactId>masterclass-java</artifactId>
+        <artifactId>workshop-java</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sandbox</artifactId>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.14</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
