--- a/supplier-api/pom.xml
+++ b/supplier-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>fr.mbo.workshops</groupId>
-        <artifactId>masterclass-java</artifactId>
+        <artifactId>workshop-java</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
